Add icon, redesign the start screen

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Present</title>
+    <title>Present - by xypnox</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
